<resources>
    <string name="app_name">Exerme</string>
    <string name="Username">Username</string>
    <string name="Email">Email</string>
    <string name="button_text1">Quiz</string>
    <string name="button_text2">Send Notifications</string>
    <string name="textview">TextView</string>
    <string name="btnBack">Return To Home</string>
    <string name="signup">Sign Up</string>
    <string name="btnNotification">Set Reminder</string>
    <string name="Welcome">Welcome To Exerme!</string>
    <string name="Easy_workout">Easy</string>
    <string name="Medium_workout">Medium</string>
    <string name="Hard_workout">Hard</string>
    <string name="intensity">What level of workout would you like?</string>
    <string name="frequency">How many times a week do you want to workout?</string>
    <string name="one_time">One Time</string>
    <string name="three_times">Three Times</string>
    <string name="seven_times">Seven Times</string>
    <string name="set_reminder">Set Reminder</string>
    <string name="GoToDashboard">Confirm Preferences</string>
    <string name="GoToPreferences">Change Preferences</string>
    <string name="GoToDashboard_from_video">Return To Dashboard</string>
    <string name="Workout_Video1">WorkOut Video 1</string>
    <string name="Workout_Video2">WorkOut Video 2</string>
    <string name="Workout_Video3">WorkOut Video 3</string>
    <string name="Workout_Video4">WorkOut Video 4</string>
    <string name="Workout_Video5">WorkOut Video 5</string>
    <string name="Workout_Video6">WorkOut Video 6</string>
    <string name="streakButtonText">Streak Log</string>
    <string name="textStreak">Your streak is:</string>
    <string name="textBunny">Good job! Keep up the great work!</string>

</resources>