<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Preferences">

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/IntensityChipGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/surveyQuestionWorkoutLength2"
        app:layout_constraintVertical_bias="0.01"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/EasyChip"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Easy_workout" />

        <com.google.android.material.chip.Chip
            android:id="@+id/MediumChip"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Medium_workout" />

        <com.google.android.material.chip.Chip
            android:id="@+id/HardChip"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Hard_workout" />

    </com.google.android.material.chip.ChipGroup>

    <TextView
        android:id="@+id/surveyQuestionWorkoutLength2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFC8A569"
        android:text="@string/intensity"
        android:textColor="#0E0E0D"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/surveyQuestionWorkoutFrequency"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="172dp"
        android:background="#FFC8A569"
        android:text="@string/intensity"
        android:textColor="#0E0E0D"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/FrequencyChipGroup"
        android:layout_width="414dp"
        android:layout_height="54dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="251dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/surveyQuestionWorkoutFrequency"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/OneTimeChip"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/one_time" />

        <com.google.android.material.chip.Chip
            android:id="@+id/ThreeTimeChip"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/three_times" />

        <com.google.android.material.chip.Chip
            android:id="@+id/SevenTimeChip"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/seven_times" />
    </com.google.android.material.chip.ChipGroup>

    <Button
        android:id="@+id/GotoDashboardButton"
        android:layout_width="405dp"
        android:layout_height="49dp"
        android:layout_marginBottom="4dp"
        android:text="@string/GoToDashboard"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/GoToDashboard" />
</androidx.constraintlayout.widget.ConstraintLayout>