<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DashboardActivity">


    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                app:cardBackgroundColor="#FFFFFF"
                app:cardCornerRadius="5dp"
                app:cardElevation="5dp"
                tools:ignore="WebViewLayout">


                <ImageButton
                    android:id="@+id/image_button_1"
                    android:layout_width="177dp"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/Workout_Video1"
                    android:src="@drawable/five_min"
                    tools:src="@drawable/five_min"
                    tools:srcCompat="@tools:sample/avatars" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                app:cardBackgroundColor="#FFFFFF"
                app:cardCornerRadius="5dp"
                app:cardElevation="5dp"
                tools:ignore="WebViewLayout">


                <ImageButton
                    android:id="@+id/imageButton2"
                    android:layout_width="177dp"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/Workout_Video2"
                    tools:srcCompat="@tools:sample/avatars" />


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                app:cardBackgroundColor="#FFFFFF"
                app:cardCornerRadius="5dp"
                app:cardElevation="5dp"
                tools:ignore="WebViewLayout">

                <ImageButton
                    android:id="@+id/imageButton3"
                    android:layout_width="177dp"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/Workout_Video3"
                    tools:srcCompat="@tools:sample/avatars" />


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                app:cardBackgroundColor="#FFFFFF"
                app:cardCornerRadius="5dp"
                app:cardElevation="5dp"
                tools:ignore="WebViewLayout" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                app:cardBackgroundColor="#FFFFFF"
                app:cardCornerRadius="5dp"
                app:cardElevation="5dp"
                tools:ignore="WebViewLayout">


                <ImageButton
                    android:id="@+id/imageButton4"
                    android:layout_width="177dp"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/Workout_Video4"
                    tools:srcCompat="@tools:sample/avatars[0]" />


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                app:cardBackgroundColor="#FFFFFF"
                app:cardCornerRadius="5dp"
                app:cardElevation="5dp"
                tools:ignore="WebViewLayout">


                <ImageButton
                    android:id="@+id/imageButton5"
                    android:layout_width="177dp"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/Workout_Video5"
                    tools:srcCompat="@tools:sample/avatars[0]" />


            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/calendarButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_text2"
        app:layout_constraintBottom_toBottomOf="@+id/scrollView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/PrefButton"
        android:layout_width="196dp"
        android:layout_height="wrap_content"
        android:text="@string/GoToPreferences"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/streakButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/streakButtonText"
        app:layout_constraintBottom_toTopOf="@+id/calendarButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>
